--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,33 +1,86 @@
 /* Modal z-index stacking */
 .modal-backdrop {
-    z-index: 1040;
+    z-index: 1050;
 }
 
 .modal {
-    z-index: 1050;
+    z-index: 1055 !important;
+}
+
+.modal-dialog {
+    z-index: 1056 !important;
 }
 
 /* Create Survey Modal */
 #createSurveyModal {
-    z-index: 1060;
+    z-index: 1060 !important;
+}
+
+#createSurveyModal .modal-dialog {
+    z-index: 1061 !important;
 }
 
 /* Add Field Modal */
 #addFieldModal {
-    z-index: 1070;
+    z-index: 1070 !important;
+}
+
+#addFieldModal .modal-dialog {
+    z-index: 1071 !important;
 }
 
 /* Add Group Modal */
 #addGroupModal {
-    z-index: 1080;
+    z-index: 1070 !important;
+}
+
+#addGroupModal .modal-dialog {
+    z-index: 1071 !important;
+}
+
+#manageGroupsModal {
+    z-index: 1070 !important;
+}
+
+#manageGroupsModal .modal-dialog {
+    z-index: 1071 !important;
+}
+
+#selectGroupModal {
+    z-index: 1070 !important;
+}
+
+#selectGroupModal .modal-dialog {
+    z-index: 1071 !important;
+}
+
+#viewSurveysModal {
+    z-index: 1080 !important;
+}
+
+#viewSurveysModal .modal-dialog {
+    z-index: 1081 !important;
 }
 
 /* Survey Detail Modal */
 #surveyDetailModal {
-    z-index: 1090;
+    z-index: 1090 !important;
+}
+
+#surveyDetailModal .modal-dialog {
+    z-index: 1091 !important;
 }
 
 /* Group Responses Modal */
 #groupResponsesModal {
-    z-index: 1100;
+    z-index: 1100 !important;
+}
+
+#groupResponsesModal .modal-dialog {
+    z-index: 1101 !important;
+}
+
+.blur-background {
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
 } 
